# etl_pyspark_mysql_minio_s3

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/app/etl/: extract.py  transform.py
src/app/utils/: generate_inserts.py  inserts.py  s3.py  spark_session.py  zerar_completo.py
